Fix img too big on mobile

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -107,6 +107,10 @@
     width: 100%;
     padding-right: 10px;
   }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 @media only screen and (max-width: 380px) {
@@ -118,5 +122,9 @@
     // border: 1px solid red;
     max-width: 300px;
     // margin: 0 0 5px;
+  }
+  img {
+    max-width: 100%;
+    max-height: 100%;
   }
 }
